# ecg-mi-inference

./: .env.sample  .gitignore  .pre-commit-config.yaml  DOCKER.md  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  docker-compose.ssh.yml  docker-compose.yml
.kiro/specs/authorization/: design.md  requirements.md  spec.json  tasks.md
.kiro/specs/diagnosis-list/: design.md  requirements.md  spec.json  tasks.md
.kiro/specs/diagnosis-viewer/: design.md  requirements.md  spec.json  tasks.md
.kiro/specs/ecg-mi-inferencer/: requirements.md  spec.json
.kiro/specs/exam-list/: design.md  requirements.md  spec.json
.kiro/specs/exam-viewer/: requirements.md  spec.json
.kiro/specs/file-importer/: design.md  requirements.md  spec.json  tasks.md
.kiro/specs/folder-watcher/: design.md  requirements.md  spec.json  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: auth_security.py  bnp_inference.py  data.py  database.py  ecg_service.py  examination_events.py  file_importer.py  folder_watcher.py  inference_payload.py  inference_service.py  main.py  mfer_wave_export.py  models.py
backend/app/api/: auth.py  examinations.py  inferences.py
backend/config/: bnp_infer.yaml
backend/data/: ecg_mi.db
backend/ecg_mi_inference_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_auth_api.py  test_auth_security.py  test_bnp_inference_config.py  test_ecg_service.py  test_examination_events.py  test_examinations_list.py  test_file_importer.py  test_folder_watcher.py  test_inference_mock.py  test_inference_payload.py  test_mfer_wave_export.py
docker/frontend/: Dockerfile
docs/: todo.md
frontend/: .gitignore  .prettierignore  README.md  biome.json  eslint.config.js  index.html  orval.config.ts  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: .gitkeep
frontend/src/components/ui/Button/: Button.stories.tsx  Button.test.tsx  Button.tsx
frontend/src/domain/ecg/: types.ts
frontend/src/domain/inference/: types.ts
frontend/src/domain/patient/: types.ts
frontend/src/features/auth/: AuthContext.tsx  auth.css  index.ts
frontend/src/features/auth/components/: LoginPage.tsx  PasswordStrengthIndicator.tsx  ProtectedRoute.test.tsx  ProtectedRoute.tsx
frontend/src/features/auth/hooks/: useAuth.test.tsx  useAuth.ts
frontend/src/features/diagnosis-list/: DiagnosisListPage.tsx  diagnosis-list.css  index.ts  types.ts
frontend/src/features/diagnosis-list/components/: DiagnosisDetailPanel.css  DiagnosisDetailPanel.tsx  DiagnosisTable.tsx  EmptyState.tsx  ErrorState.tsx  FilterPanel.tsx  ListPagination.tsx
frontend/src/features/diagnosis-list/hooks/: useDiagnosisFilters.ts  useDiagnosisList.ts  useExaminationsSse.ts  useRowSelection.ts  useSortQueryParams.ts
frontend/src/features/diagnosis-viewer/: DiagnosisLegacyRedirect.tsx  DiagnosisViewerPage.tsx  ExaminationDetailView.tsx  diagnosis-viewer.css  index.ts  types.ts
frontend/src/features/diagnosis-viewer/components/: BackToListButton.tsx  ConfirmDialog.tsx  EcgImagePanel.tsx  ExaminationInfoCard.tsx  InferenceResultPanel.tsx  JudgmentModal.tsx  PatientInfoCard.tsx
frontend/src/features/diagnosis-viewer/hooks/: useDiagnosisDetail.ts  useEcgImage.ts  useInference.ts
frontend/src/features/exam-list/: types.ts
frontend/src/features/exam-list/components/: EcgLeadChart.tsx  ExamDetailCard.tsx  ExamListFooter.tsx  ExamListPagination.tsx  ExamListTable.tsx  ExamSearchForm.tsx  index.ts  (+1 more)
frontend/src/lib/: apiClient.ts  auth.ts  datetime.ts  patientName.ts
frontend/src/mocks/: .gitkeep
frontend/src/test/: setup.ts
frontend/src/viewmodels/: useAuth.ts
(+1 files in other folders)
