[project]
name = "ecg-mi-inference-backend"
version = "0.1.0"
description = "ECG MI Inference Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.44.0",
    "sqlalchemy>=2.0.49",
    "pandas>=3.0.0",
    "matplotlib>=3.10.0",
    "numpy>=2.4.0",
    "Pillow>=12.2.0",
    "python-dateutil>=2.9.0",
    "python-jose>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    # passlib 1.7.x は bcrypt 4.1+ の API 変更と非互換（__about__ 削除等）
    "bcrypt>=4.0.1,<4.1.0",
    "watchdog>=6.0.0",
    "pyyaml>=6.0.3,<7.0.0",
    "mfer-tools @ git+https://github.com/tkwataru/mfer-tools.git@main",
    # ECG→BNP 推論（コア機能）。上流: https://github.com/tkwataru/inference_ecg_bnp
    "inference-ecg-bnp @ git+https://github.com/tkwataru/inference_ecg_bnp.git@main",
    "torch>=2.5.1,<3.0.0",
    "torchvision>=0.20.1,<0.23.0",
    "torchaudio>=2.5.1,<3.0.0",
    "timm>=1.0.26,<2.0.0",
    "albumentations>=2.0.8,<3.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "pyright>=1.1.408",
    "ruff>=0.15.11",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [".venv", "data", "vendor", "**/__pycache__", "vendor/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
include = ["app"]
exclude = ["data", ".venv"]
reportMissingTypeStubs = false
